# PushingEnvelope

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pyproject.toml  test_polygon.ipynb
src/: __init__.py  add_role_axioms_to_benchmark.py  baseline_sweep.py  boxes.py  config.py  create_full_norm_ontology.py  create_inferences_benchmark.py  create_prediction_benchmark.py  evaluate.py  evaluate_ppi.py  evaluate_test.py  multiboxes.py  ranking_result.py  run_all_sweeps.py  run_many_seeds.py  train.py  train_ppi.py
src/family/: family_data.py  incompleteness_result_data.py  plot_family.py  plot_incompleteness.py  train_family.py  train_incompleteness.py
src/model/: AblationModel.py  BoxEL.py  BoxSquaredEL.py  Elbe.py  Elem.py  EmELpp.py  MultiBoxEL.py  MultiBoxEL2.py  MultiBoxEL3.py  loaded_models.py
src/multibox_operations/: multibox_operations.py
src/utils/: data_loader.py  inferences_data_loader.py  old_data_loader.py  ppi_data_loader.py  prediction_data_loader.py  utils.py
tests/: test_multibox_el.py  test_multibox_operations.py  test_multiboxel.py  test_prediction_data_loader.py
