[tool.poetry]
name = "pushingenvelope"
version = "0.1.0"
description = ""
authors = ["Amity Aharoni <aharoni.amittai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
joblib = "1.1.0"
numpy = "1.22.3"
tqdm = "4.64.0"
wandb = "0.13.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
