[tool.poetry]
name = "pushingenvelope"
version = "0.1.0"
description = ""
authors = ["Amity Aharoni <amittai-shlomo.aharoni@student.uva.nl>"]
readme = "README.md"

[[tool.poetry.packages]]
include = "src/"

[tool.poetry.dependencies]
python = "^3.10"
joblib = "1.1.0"
numpy = "^1.22.4"
tqdm = "4.64.0"
wandb = "0.13.9"
torch = "^2.2.2"
python-dotenv = "^1.0.1"
autopep8 = "^2.1.0"
flake8-bugbear = "^24.4.21"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
types-tqdm = "^4.66.0.20240417"
mypy = "^1.10.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
pytest = "^8.1.1"
pre-commit = "^3.7.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
warn_return_any = true
warn_unused_ignores = true
